--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="content" role="main">
 <input type="file" name="image" multiple (change)="selectImage($event)">
 <button type="submit" (click)="onSubmit()">Upload</button>
-  <div #viewer class="webviewer"></div>
+  <!-- <div #viewer class="webviewer"></div> -->
 </div>
 
 <router-outlet></router-outlet>
