--- a/src/app/fileupload/fileupload.component.css
+++ b/src/app/fileupload/fileupload.component.css
@@ -1,7 +1,66 @@
-.webviewer{
-  width:100%;
-  height: 100vh;
-}
+
 .card{
   box-shadow: 0px 0px 5px lightgrey;
 }
+.form-contro{
+  border: none;
+  border-bottom: 1px solid black;
+  outline: none;
+
+}
+input:hover{
+  background-color: transparent;
+}
+.buttons{
+  float: right;
+}
+.buttons .btn{
+  width: 100%;
+  border-radius: 20px;
+}
+.table {
+  width: 100%;
+  margin-bottom: 1rem;
+  color: #212529;
+  border: 1px solid;
+  border-radius: 1rem;
+  overflow: hidden;
+  box-shadow: 0px 0px 1px 1px;
+}
+.lds-hourglass {
+  display: inline-block;
+  position: relative;
+  width: 200px;
+  height: 200px;
+}
+.lds-hourglass:after {
+  content: " ";
+  display: block;
+  border-radius: 100%;
+  width: 0;
+  height: 0;
+  margin: 20px;
+  box-sizing: border-box;
+  border: 50px solid #007BFF;
+  border-color: #007BFF transparent #007BFF transparent;
+  animation: lds-hourglass 1.2s infinite;
+}
+@keyframes lds-hourglass {
+  0% {
+    transform: rotate(0);
+    animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  }
+  50% {
+    transform: rotate(900deg);
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
+  100% {
+    transform: rotate(1800deg);
+  }
+}
+
+
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
